Bug 1114333 - "putImageData(imageData, 0, 0, 0, 0, 1, 1) unreasonably slow". r=bas